<?xml version="1.0" encoding="utf-8"?>




<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="25dp"
            android:elevation="0dp"
            android:src="@drawable/ic_mathematics"/>

        <Button
            android:id="@+id/bt_launch_game"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/colorPrimary"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_margin="20dp"
            android:text="@string/bt_start_game" />


        <Button
            android:id="@+id/bt_statistics"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/colorPrimary"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_margin="20dp"
            android:text="@string/bt_statistics" />


        <Button
            android:id="@+id/bt_preferences"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/colorPrimary"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_margin="20dp"
            android:text="@string/bt_preferences" />

    </LinearLayout>

</LinearLayout>