<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<include layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:background="@color/colorBackground"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            tools:context=".Statistics">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="start|bottom"
                    android:paddingStart="20dp"
                    android:textSize="17sp"
                    android:textColor="@android:color/black"
                    android:text="@string/statistics_total" />

                <TextView
                    android:id="@+id/text_total"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:textColor="@android:color/black" />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="start|bottom"
                    android:paddingStart="20dp"
                    android:textSize="17sp"
                    android:textColor="@android:color/black"
                    android:text="@string/statistics_correct" />

                <TextView
                    android:id="@+id/text_correct"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:textColor="@android:color/black" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="start|bottom"
                    android:paddingStart="20dp"
                    android:textSize="17sp"
                    android:textColor="@android:color/black"
                    android:text="@string/statistics_wrong" />

                <TextView
                    android:id="@+id/text_wrong"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:textColor="@android:color/black" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="start|bottom"
                    android:paddingStart="20dp"
                    android:textSize="17sp"
                    android:textColor="@android:color/black"
                    android:text="@string/statistics_percentage" />

                <TextView
                    android:id="@+id/text_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:textColor="@android:color/black" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="start|bottom"
                    android:paddingStart="20dp"
                    android:textSize="17sp"
                    android:textColor="@android:color/black"
                    android:text="@string/statistics_times_played" />

                <TextView
                    android:id="@+id/text_times_played"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:textColor="@android:color/black" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
